add additional note

--- a/Homework/Problem Set 2/Problem-Set-2.tex
+++ b/Homework/Problem Set 2/Problem-Set-2.tex
@@ -7,7 +7,7 @@
 
 \begin{document}
 \maketitle
-
+Please choose to solve 4 out of the following 5 problems. People who work out extra problems will have extra credits that will be weighted in the final score of the course. 
 
 \section*{Hodgkin and Huxley Model}
 
