make some minor changes in the problem set

--- a/Homework/Problem Set 4/Problem-Set-4.tex
+++ b/Homework/Problem Set 4/Problem-Set-4.tex
@@ -23,7 +23,7 @@ where $c(k)$ is power spectrum of the visual inputs, $\sigma_\eta^2$ is the outp
 
 \item[(b)] Find the dependence of $W(k)$ on $C(k)$ analytically, in the limits of small and large input noise $\sigma_z^2$. Interpret your results.  \textbf{Guide}: In order to derive these limits, you will need to consider how $\mu$ varies with $\sigma_z^2$ so that the total output variance remains a constant. It can be shown that for small noise $\mu \propto \sigma_z^2$, where as for large noise,  $\mu \propto \sigma_z^4$.
 
-\item[(c)] Numerically Fourier transform $W(k)$ to calculate the spatial shape of the optimal filters. Use $N=401$ and $D=30$ and study different values of noise, $\sigma_z^2$ (given in the script file). Qualitatively explain your results, by plotting the spectrum $W(k)$ vs. $k$ and $W(n)$ vs. $n$ for different values of input noise. Compare these numerical results with your analytical predictions from (b). You will find the matlab functions fft and ifft useful.  
+\item[(c)] Numerically Fourier transform $W(k)$ to calculate the spatial shape of the optimal filters. Use $N=401$ and $D=30$ and study different values of noise, $\sigma_z^2$. Qualitatively explain your results, by plotting the spectrum $W(k)$ vs. $k$ and $W(n)$ vs. $n$ for different values of input noise. Compare these numerical results with your analytical predictions from (b). You will find the matlab functions fft and ifft useful.  
 \end{enumerate}
 
 
