update final exam

--- a/Homework/Final Exam/Final exam.tex
+++ b/Homework/Final Exam/Final exam.tex
@@ -9,6 +9,7 @@
 \begin{document}
 \maketitle
 
+\textit{Please choose to solve 4 out of the following 5 problems. People who work out extra problems will have extra credits.} 
 \section*{Poisson Spike-Train Statistics}
 1. Given the Homogeneous Poisson process (mean firing rate is independent of time), 
 \begin{equation}
@@ -28,10 +29,7 @@ Then, calculate the probability of seeing $n$ spikes $P(n)$ in the interval $T$.
 3. Generate a Poisson spike train with a time-dependent fire rate $r(t) = r_0[1 + cos(2\pi t/\tau)]$ where $r_0$ = 100 Hz and $\tau = 300$ ms. Generate a spike train for 20 s and plot it.
 \\
 \\
-4*. Let's assume that the firing rate of a neuron has the following functional form: $r(t)=r_0+r_1\sin(\omega t+\theta)$, where the phase $\theta$  is drawn uniformly between $0$ and $2\pi$ for each trial. Calculate the Fano Factor for the spike count in the time interval $T$ (as a function of $T$).
-\\
-\\
-Note: Problems with * are optional. However, solving them will give you additional credits.
+4. Let's assume that the firing rate of a neuron has the following functional form: $r(t)=r_0+r_1\sin(\omega t+\theta)$, where the phase $\theta$  is drawn uniformly between $0$ and $2\pi$ for each trial. Calculate the Fano Factor for the spike count in the time interval $T$ (as a function of $T$).
 
 \section*{Balanced Excitation and Inhibition}
 
