--- a/Homework/Problem Set 1/Problem-Set-1.tex
+++ b/Homework/Problem Set 1/Problem-Set-1.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath}
 \usepackage{hyperref}
 \title{Problem Set I}
-\date{Due Wednesday, Oct  13, 2021}
+\date{Due Thursday, Sep  22, 2022}
 
 \begin{document}
 \maketitle
@@ -37,7 +37,7 @@ In the swc file, each column has the following meaning (from left to right): seg
 
 \section*{Motif Analysis of C. elegans Connectome}
 
-Attached you will find the Adjacency Matrix of the \textit{C. elegans} connectome, namely the the connectivity patterns of $\sim 277$ neurons in the worm can be represented by a matrix, in which $A[i,j] $ represents the number of connections from neuron $i$ to neuron $j$ (or from neuron $j$ to $i$, depending on the convention).  This matrix is asymmetric for a directed graph. Now use the software mfinder, also attached in the folder, to find 2 node and 3 node motifs. Present your results just like what we did in the lecture (slide 19), and show which motifs are overrepresented as compared to a random graph. There are detailed instruction on how to use the mfinder software, and make sure you understand what your are doing. 
+Attached you will find the Adjacency Matrix of the \textit{C. elegans} connectome, namely the the connectivity patterns of $\sim 277$ neurons in the worm (a well studied model organism with a small nervous system) can be represented by a matrix, in which $A[i,j] $ represents the number of connections from neuron $i$ to neuron $j$ (or from neuron $j$ to $i$, depending on the convention).  This matrix is asymmetric for a directed graph. Now use the software mfinder, also attached in the folder, to find 2 node and 3 node motifs. Present your results just like what we did in the lecture (slide 19), and show which motifs are overrepresented as compared to a random graph (not any random graph, but random graph with the same mean connection probability between two neurons). There are detailed instruction on how to use the mfinder software, and make sure you understand what your are doing. 
 
 
 
