fix typo for HW1

--- a/Homework/Problem Set 1/Problem-Set-1.tex
+++ b/Homework/Problem Set 1/Problem-Set-1.tex
@@ -46,7 +46,7 @@ Consider neurons in primary visual cortex (V1), where each neuron has a preferre
 \[
 c(\Delta\theta) = c(0) 
 \begin{cases} 
-\sqrt{1- \Delta^2/\theta_{max}^2} & \abs{\Delta \theta} < \theta_{max} \\
+\sqrt{1- (\Delta\theta)^2/\theta_{max}^2} & \abs{\Delta \theta} < \theta_{max} \\
 0 & \abs{\Delta \theta} > \theta_{max} \\
 \end{cases}
 \]
