--- a/Homework/Problem Set 3/Problem-Set-3.tex
+++ b/Homework/Problem Set 3/Problem-Set-3.tex
@@ -10,7 +10,7 @@
 \maketitle
 
 
-There are 4 problem sets, which cover the basic concepts we have introduced in the course on sensory coding. Please select any three problem sets.  (*) indicates that this part has not been covered by our lectures. But solving it would give you extra credit.  If you are willing to solve all three problem sets, that would be great, since the TF will give you \textit{super extra} credit.
+There are 4 problem sets, which cover the basic concepts we have introduced in the course on sensory coding. Please select any three problem sets.  (*) indicates that this part has not been covered by our lectures. But solving it would give you extra credit.  If you are willing to solve all 4 problem sets, that would be great, since the TA will give you \textit{super extra} credit.
 
 
 \section*{Analyze Motion Detection Neuron in Fly}
